day-4 Validation, DTOs, and Exception Handling